--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>16-Typoweb</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello world</h1>
+  </body>
 </html>
