html code first version

--- a/index.html
+++ b/index.html
@@ -8,6 +8,82 @@
     <title>16-Typoweb</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <p class="icon">G</p>
+      <p class="page-title">Grenze</p>
+    </header>
+    <div class="opening">
+      <div class="chapters">
+        <h2 class="chapter-selection">GLYPHES</h2>
+        <h2 class="chapter-selection">WEIGHT</h2>
+        <h2 class="chapter-selection">TEST</h2>
+      </div>
+      <figure>
+        <img src="./img/typoweb-weights.gif" alt="gif font weights">
+        <figcaption>oh hi</figcaption>
+      </figure>
+    </div>
+    <img class="alphabet alphabet-normal" src="./img/SVG/alphabet-normal.svg" 
+    alt="normal alphabet board">
+    <img class="alphabet alphabet-gotisch" src="./img/SVG/alphabet-gotisch.svg" 
+    alt="gotisch alphabet board">
+    <img class="weights-typeface" src="./img/SVG/weights-fun-2.svg" 
+    alt="font_weights_exemple_1">
+    <p class="history">
+      Grenze is a big typeface system of 9 weights (Thin, Extra Light, Light, 
+      Regular, Medium, Semi Bold, Bold, Extra Bold and Black) with matching 
+      italics. A hybrid development between Roman and Blackletter styles, in 
+      search of combining the impact and attraction of texture with the 
+      readability of classical forms. Designed to be applied mainly in magazines
+      , it presents great performance and a rich palette of colors that invites 
+      to uses creative applications. The name of this family derives from the 
+      word “frontier”.
+    </p>
+    <div class="imd-ex">
+      <h1 class="imd-ex interactive-ex">INTERACTIVE</h1>
+      <h1 class="imd-ex media-ex">MEDIA</h1>
+      <h1 class="imd-ex designer-ex">DESIGNER</h1>
+    </div>
+    <img class="dw-exemple" src="./img/SVG/exemple-1.svg" 
+    alt="font_weights_exemple_2">
+    <p class="creator-information">
+      Renata Polastri is a graphic designer, master of the University of the 
+      State of Minas Gerais and typography specialist of the University of 
+      Buenos Aires. Since 2014 she has been at the office of Estúdio Bogotá, of 
+      which she is a founding partner. The Grenze typography, of her authorship, 
+      was recently selected for the Latin Types Biennial. She’s contribueted for 
+      Grenze with the Omnibus-Type Team.
+    </p>
+    <img class="inspired-poster" src="./img/SVG/inspired-poster.svg" 
+    alt="inspired_poster_exemple">
+    <img class="weights-show" src="./img/SVG/all-weights.svg" 
+    alt="all_weights_board">
+    <img class="weights-devil-train" src="./img/SVG/weights-fun-3.svg" 
+    alt="devil_poster_exemple">
+    <div class="banner-devil">
+      <div class="banner-devil top-banner">
+        Devil's Train Devil's Train Devil's Train
+      </div>
+      <div class="banner-devil middle-banner">
+        Devil's Train Devil's Train Devil's Train
+      </div>
+      <div class="banner-devil bottom-banner">
+        Devil's Train Devil's Train Devil's Train
+      </div>
+    </div>
+    <h3>GRENZE TEST</h3>
+    <input class="normal-test" type="text">
+    <h3>GRENZE GOTISCH TEST</h3>
+    <input class="gotisch-test" type="text">
+    <footer>
+      <p>
+        Lucile Guex
+        <br>
+        @eikon-2022
+      </p>
+      <p>
+        Typography // Frontend Developpment
+      </p>
+    </footer>
   </body>
 </html>
