--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h2 class="chapter-selection">TEST</h2>
       </div>
       <figure>
-        <img src="./img/typoweb-weights.gif" alt="gif font weights">
+        <img class="weights-opening" src="./img/typoweb-weights-270px.gif" 
+        alt="gif font weights">
         <figcaption>oh hi</figcaption>
       </figure>
     </div>
