--- a/index.html
+++ b/index.html
@@ -9,27 +9,21 @@
   </head>
   <body>
     <header>
-      <p class="icon">G</p>
-      <p class="page-title">Grenze</p>
+      <h1 class="page-title">Grenze</h1>
     </header>
-    <div class="opening">
-      <div class="chapters">
-        <h2 class="chapter-selection">GLYPHES</h2>
-        <h2 class="chapter-selection">WEIGHT</h2>
-        <h2 class="chapter-selection">TEST</h2>
-      </div>
-      <figure>
-        <img class="weights-opening" src="./img/typoweb-weights-270px.gif" 
-        alt="gif font weights">
-        <figcaption>oh hi</figcaption>
-      </figure>
+    <div class="chapters">
+      <a class="chapter-selection" href="#weights" >WEIGHTS</a>
+      <a class="chapter-selection" href="#glyphes">GLYPHES</a>
+      <a class="chapter-selection" href="#test">TEST</a>
     </div>
-    <img class="alphabet alphabet-normal" src="./img/SVG/alphabet-normal.svg" 
-    alt="normal alphabet board">
-    <img class="alphabet alphabet-gotisch" src="./img/SVG/alphabet-gotisch.svg" 
-    alt="gotisch alphabet board">
-    <img class="weights-typeface" src="./img/SVG/weights-fun-2.svg" 
-    alt="font_weights_exemple_1">
+    <h3 id="weights">WEIGHTS</h3>
+    <img class="weights-show" src="./img/SVG/all-weights.svg" 
+      alt="all_weights_board">
+    <figure>
+      <img class="weights-opening" src="./img/typoweb-weights-270px.gif" 
+      alt="gif font weights">
+     <figcaption>oh hi</figcaption>
+    </figure>
     <p class="history">
       Grenze is a big typeface system of 9 weights (Thin, Extra Light, Light, 
       Regular, Medium, Semi Bold, Bold, Extra Bold and Black) with matching 
@@ -40,13 +34,8 @@
       to uses creative applications. The name of this family derives from the 
       word “frontier”.
     </p>
-    <div class="imd-ex">
-      <h1 class="imd-ex interactive-ex">INTERACTIVE</h1>
-      <h1 class="imd-ex media-ex">MEDIA</h1>
-      <h1 class="imd-ex designer-ex">DESIGNER</h1>
-    </div>
-    <img class="dw-exemple" src="./img/SVG/exemple-1.svg" 
-    alt="font_weights_exemple_2">
+    <img class="weights-typeface" src="./img/SVG/weights-fun-2.svg" 
+    alt="font_weights_exemple_1">
     <p class="creator-information">
       Renata Polastri is a graphic designer, master of the University of the 
       State of Minas Gerais and typography specialist of the University of 
@@ -55,10 +44,25 @@
       was recently selected for the Latin Types Biennial. She’s contribueted for 
       Grenze with the Omnibus-Type Team.
     </p>
+    <div class="imd-ex">
+      <h1 class="imd-ex interactive-ex">INTERACTIVE</h1>
+      <h1 class="imd-ex media-ex">MEDIA</h1>
+      <h1 class="imd-ex designer-ex">DESIGNER</h1>
+    </div>
+    <img class="dw-exemple" src="./img/SVG/exemple-1.svg" 
+    alt="font_weights_exemple_2">
+    <h3 id="glyphes">GLYPHES</h3>
+    <img class="alphabet alphabet-normal" src="./img/SVG/alphabet-normal.svg" 
+    alt="normal alphabet board">
+    <img class="alphabet alphabet-gotisch" src="./img/SVG/alphabet-gotisch.svg" 
+    alt="gotisch alphabet board">
     <img class="inspired-poster" src="./img/SVG/inspired-poster.svg" 
     alt="inspired_poster_exemple">
-    <img class="weights-show" src="./img/SVG/all-weights.svg" 
-    alt="all_weights_board">
+    <h3 id="test">TEST</h3>
+    <h4>GRENZE TEST</h4>
+    <input class="normal-test" type="text">
+    <h4>GRENZE GOTISCH TEST</h4>
+    <input class="gotisch-test" type="text">
     <img class="weights-devil-train" src="./img/SVG/weights-fun-3.svg" 
     alt="devil_poster_exemple">
     <div class="banner-devil">
@@ -72,10 +76,6 @@
         Devil's Train Devil's Train Devil's Train
       </div>
     </div>
-    <h3>GRENZE TEST</h3>
-    <input class="normal-test" type="text">
-    <h3>GRENZE GOTISCH TEST</h3>
-    <input class="gotisch-test" type="text">
     <footer>
       <p>
         Lucile Guex
