--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     alt="devil_poster_exemple">
     <div class="banner-devil">
       <div class="banner-devil top-banner">
-        Devil's Train Devil's Train Devil's Train
+        <p>Devil's Train Devil's Train</p>
       </div>
       <div class="banner-devil middle-banner">
-        Devil's Train Devil's Train Devil's Train
+        <p>Devil's Train Devil's Train</p>
       </div>
       <div class="banner-devil bottom-banner">
-        Devil's Train Devil's Train Devil's Train
+        <p>Devil's Train Devil's Train</p> 
       </div>
     </div>
     <footer>
