Revert "End's banner animation css code"
This reverts commit 525cad430e225196fe05fd83670fe9c1ac8c822f.

--- a/index.html
+++ b/index.html
@@ -66,19 +66,13 @@
     alt="devil_poster_exemple">
     <div class="banner-devil">
       <div class="banner-devil top-banner">
-        <p>
-          Devil's Train Devil's Train Devil's Train Devil's Train Devil's Train
-        </p>
+        <p>Devil's Train Devil's Train</p>
       </div>
       <div class="banner-devil middle-banner">
-        <p>
-          Devil's Train Devil's Train Devil's Train Devil's Train Devil's Train
-        </p>
+        <p>Devil's Train Devil's Train</p>
       </div>
       <div class="banner-devil bottom-banner">
-        <p>
-          Devil's Train Devil's Train Devil's Train Devil's Train Devil's Train
-        </p> 
+        <p>Devil's Train Devil's Train</p> 
       </div>
     </div>
     <footer>
