Extra glyphes html & css code

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
     alt="normal alphabet board">
     <img class="alphabet alphabet-gotisch" src="./img/SVG/alphabet-gotisch.svg" 
     alt="gotisch alphabet board">
+    <h3 class="title-extra">AND MORE !</h3>
+    <p class="glyphes-extra">
+      Ắ Ặ Ằ Ẳ Ẵ Ǎ Ấ Ậ Ầ Ẩ Ẫ Ȁ Ạ Ả Ą Ǻ Ã Č Ċ Ð Ď Ḍ ǲ ǅ Ĕ Ě Ế Ệ Ề Ể Ễ Ȅ Ẹ Ẻ Ē Ę Ẽ 
+      Ğ Ǧ Ģ Ġ Ħ Ḥ Ĭ Ǐ Ȉ Ï Ị Ỉ Ī Į Ĩ Ĵ Ķ Ĺ Ļ Ŀ Ł Ń Ň Ņ Ṅ Ŋ Ɲ Ŏ Ǒ Ố Ộ Ồ Ổ Ỗ Ȍ Ȫ Ȱ 
+      Ọ Ỏ Ơ Ớ Ợ Ờ Ở Ỡ Ő Ō Ǫ Ȭ Þ Ŕ Ř Ŗ Ȑ Ṛ Ȓ Ş Ŝ Ș ẞ Ə Ŧ Ť Ţ Ț Ṭ Ŭ Ǔ Ȕ Ǘ Ǚ Ǜ Ǖ Ủ 
+      Ư Ứ Ự Ừ Ử Ữ Ű Ū Ų Ů Ŵ Ẅ Ẁ Ý Ŷ Ÿ Ỵ Ỳ Ỷ Ȳ Ỹ Ź Ž Ż Ẓ Ć Ń Ś Ź ß ck st ₵  ₡ ₫ ƒ
+       ₣ ₲ ₭ ₺ ₦ ₱ ₽ ₹ ₩ ∏ √ ∂ µ ¦ † ℓ ‡ № 
+    </p>
     <img class="inspired-poster" src="./img/SVG/inspired-poster.svg" 
     alt="inspired_poster_exemple">
     <h3 id="test">TEST</h3>
