--- a/index.html
+++ b/index.html
@@ -74,13 +74,19 @@
     alt="devil_poster_exemple">
     <div class="banner-devil">
       <div class="banner-devil top-banner">
-        <p>Devil's Train Devil's Train</p>
+        <p>
+          Devil's Train Devil's Train Devil's Train Devil's Train Devil's Train
+        </p>
       </div>
       <div class="banner-devil middle-banner">
-        <p>Devil's Train Devil's Train</p>
+        <p>
+          Devil's Train Devil's Train Devil's Train Devil's Train Devil's Train
+        </p>
       </div>
       <div class="banner-devil bottom-banner">
-        <p>Devil's Train Devil's Train</p> 
+        <p>
+          Devil's Train Devil's Train Devil's Train Devi's Train Devil's Train
+        </p> 
       </div>
     </div>
     <footer>
